cedar-lean/UnitTest/parser_tests/negative/dot_without_field.cedar
permit(principal, action, resource) when { resource. };
